fixed h2 clipping on homepage

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -26,7 +26,7 @@ header[role=banner] h2 {
   margin: .5em 10px 0 10px;
   font-size: 200%;
   font-weight: normal;
-  line-height: 100%;
+  line-height: 150%;
   letter-spacing: -.02em;
   color: black;
 }
